# palautusrepositorio

./: .gitignore  MERGE.md  PULL.md  README.md  changelog.txt  muutos.py
viikko1/nhl-statistics-1/src/: index.py  statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/git-branch-harjoitus/: README.md  index.py  logger.py
viikko2/nhl-reader/src/: index.py  player.py  player_stats.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/hello-robot/: log.html  output.xml  report.html
viikko3/web-login/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko5/tennis/src/tests/: tennis_game_test.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tekoaly.py  luo_peli.py
